# AgentenSystem

./: .env.example  .gitignore  Agents.md  README.md  pyproject.toml  run_research_pipeline.bat
agents/: __init__.py
config/: brief.yaml  identity.yaml  outreach_template.md  pipeline.yaml
data/raw/: fablab_beispiel.json  robotics_club.json
data/staging/: blacklist.json  connection_check.txt  research_notes.md
data/staging/directory_expansions/: fablab-luebeck.de.json  fg.hs-wismar.de-fakultaet-ausstattung-werkstaetten-gipswerkstatt.json  haus-drei.de-projekt-metallwerkstatt.json  haus-drei.de.json  hs-flensburg.de-hochschule-organisation-einrichtungen-fablab-ideenreich.json  makerspace-hamburg.de.json  mintforum.de-anbieter-desy-schuelerlabore.json  mintforum.de-anbieter-foerderverein-mintarium.json  mintforum.de-anbieter-luebecker-offenes-labor-lola.json  mintforum.de-anbieter-mintarium-hamburg.json  mintforum.de-anbieter-offene-werkstatt-norderstedt-ev.json  mintforum.de-netzwerkpartner.json  offene-werkstaetten.org-de-seite-reparieren-verbindet.json  offene-werkstaetten.org-de-seite-unsere-ziele.json  offene-werkstaetten.org-de-werkstatt-suche.json  (+25 more)
docs/: data_persistence.md
outputs/letters/: chaotikum-e.v..md  laserlab-lübeck.md  makerspace-hamburg.md
tools/: __init__.py  blacklist.py  directory_parser.py  duckduckgo.py  google_search.py  identity_loader.py  northdata.py  org_registry.py  seed_registry.py  site_scraper.py  web_search_agent.py
workflows/: __init__.py  brief.py  chat_entry.py  poc.py  research_pipeline.py  settings.py
