[project]
name = "agentensystem"
version = "0.1.0"
description = "Mehrstufiges Agenten-Framework fuer Recherche und Outreach."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.2.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents", "tools", "workflows"]
