[project]
name = "agentensystem"
version = "0.1.0"
description = "Mehrstufiges Agenten-Framework fuer Recherche und Outreach."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0,<2.0.0",
    "openai-agents>=0.2.0",
    "pyyaml>=6.0.3",
    "duckduckgo-search>=6.1.0,<7.0.0",
    "lxml>=4.9.0,<6.0.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tools", "workflows"]
